[gd_scene load_steps=29 format=3 uid="uid://c7imsi34c3t8f"]

[ext_resource type="Script" path="res://addons/autofoldercolor/essential/dock/afc_dock.gd" id="1_yutg1"]
[ext_resource type="Texture2D" uid="uid://w10d12mkg8mt" path="res://addons/autofoldercolor/essential/dock/icons/settings_wrench.png" id="2_abtwb"]
[ext_resource type="Texture2D" uid="uid://bvtpcyc3wdsnx" path="res://addons/autofoldercolor/essential/dock/icons/add.png" id="2_yey5h"]
[ext_resource type="Texture2D" uid="uid://xlk5c578hn6f" path="res://addons/autofoldercolor/essential/dock/icons/trash.png" id="3_f3dlf"]
[ext_resource type="PackedScene" uid="uid://b2f8aq30bsgv3" path="res://addons/autofoldercolor/essential/dock/components/scenes/option_popup.tscn" id="4_wu5yf"]
[ext_resource type="PackedScene" uid="uid://cnpeeo7qsl4rs" path="res://addons/autofoldercolor/essential/dock/components/scenes/input_popup.tscn" id="5_82nrk"]
[ext_resource type="PackedScene" uid="uid://djnbeug0lum8u" path="res://addons/autofoldercolor/essential/dock/components/scenes/bool_popup.tscn" id="6_175fn"]
[ext_resource type="PackedScene" uid="uid://d0wsxr3xvkwid" path="res://addons/autofoldercolor/essential/dock/components/scenes/information_popup.tscn" id="7_csjkx"]
[ext_resource type="PackedScene" uid="uid://gaal1ajolrhn" path="res://addons/autofoldercolor/essential/dock/components/afc_settings/afc_settings_window.tscn" id="8_yasyg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hws5v"]
bg_color = Color(0.6, 0.6, 0.6, 0.188235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltt02"]
bg_color = Color(0, 0, 0, 0.776471)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50eyw"]
bg_color = Color(0.07, 0.07, 0.07, 0.772549)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5pj5"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
bg_color = Color(0.57, 0.44992, 0.1197, 0.94902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p5of"]
bg_color = Color(0.108, 0.4, 0.115067, 0.603922)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ys8u"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
bg_color = Color(0.554309, 0.10582, 0.10582, 0.592157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opf2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fb17"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
bg_color = Color(0.07, 0.07, 0.07, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5hd2"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
bg_color = Color(0.466057, 0.165598, 0.165598, 0.882353)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7c1q"]
bg_color = Color(0, 0, 0, 0.509804)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3w7t"]
bg_color = Color(1, 1, 1, 0.419608)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x10f0"]
content_margin_right = 4.0
bg_color = Color(0.4558, 0.491663, 0.53, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvu5t"]
content_margin_right = 4.0
bg_color = Color(0.460103, 0.496333, 0.533943, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85jbk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_color = Color(0.188235, 0.188235, 0.188235, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2y3ip"]
color = Color(0.187722, 0.187722, 0.187722, 1)
thickness = 3
vertical = true

[sub_resource type="SystemFont" id="SystemFont_sjoms"]
font_weight = 700
subpixel_positioning = 0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yj4bt"]
color = Color(0.187722, 0.187722, 0.187722, 1)
thickness = 2
vertical = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_og3yb"]
content_margin_right = 4.0
bg_color = Color(0.4558, 0.491663, 0.53, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4p5h0"]

[node name="AutoFolderColor" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yutg1")

[node name="Margin" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Main" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ActionButtons" type="Panel" parent="Margin/Main"]
clip_contents = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_hws5v")

[node name="Margin" type="MarginContainer" parent="Margin/Main/ActionButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 5

[node name="Buttons" type="HBoxContainer" parent="Margin/Main/ActionButtons/Margin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ApplyButtons" type="HBoxContainer" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Apply" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/ApplyButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Applies the colors that are set below.
If both are empty nothing will happen."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_v5pj5")
text = "Apply"

[node name="Auto" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/ApplyButtons"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "With this button enabled,
it automatically applies the settings below."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4p5of")
theme_override_styles/normal = SubResource("StyleBoxFlat_2ys8u")
toggle_mode = true
text = "Auto"

[node name="VSeparator" type="VSeparator" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_opf2u")

[node name="ConfigButtons" type="HBoxContainer" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Load" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/ConfigButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Loads a configuration from the
\"autofoldercolor/save_data/saved_configs\" folder."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_5fb17")
text = "Load"

[node name="Save" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/ConfigButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Saves your current file colors into the
\"autofoldercolor/save_data/saved_configs\" folder."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_5fb17")
text = "Save"

[node name="VSeparator2" type="VSeparator" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_opf2u")

[node name="FileColorButtons" type="HBoxContainer" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Backup" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/FileColorButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Gets your currently set FileSystem colors and backs them up to the
\"autofoldercolor/save_data/backups\" folder."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_5fb17")
text = "Backup"

[node name="Restore" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/FileColorButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Restores your previously backed up FileSystem colors from the
\"autofoldercolor/save_data/backups\" folder."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_5fb17")
text = "Restore"

[node name="Clear" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons/FileColorButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Clears all current folder colors."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_ltt02")
theme_override_styles/pressed = SubResource("StyleBoxFlat_50eyw")
theme_override_styles/normal = SubResource("StyleBoxFlat_x5hd2")
text = "Clear"

[node name="VSeparator3" type="VSeparator" parent="Margin/Main/ActionButtons/Margin/Buttons"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_opf2u")

[node name="SettingsButton" type="Button" parent="Margin/Main/ActionButtons/Margin/Buttons"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
tooltip_text = "Open settings window"
theme_override_colors/icon_hover_color = Color(0.497004, 0.758701, 0.839433, 1)
theme_override_icons/icon = ExtResource("2_abtwb")
theme_override_styles/hover = SubResource("StyleBoxFlat_b7c1q")
theme_override_styles/normal = SubResource("StyleBoxFlat_s3w7t")
icon = ExtResource("2_abtwb")
icon_alignment = 1

[node name="Border" type="Panel" parent="Margin/Main/ActionButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x10f0")
metadata/_edit_lock_ = true

[node name="Contains" type="Panel" parent="Margin/Main"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kvu5t")

[node name="Margin" type="MarginContainer" parent="Margin/Main/Contains"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1000, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Main/Contains/Margin"]
clip_contents = true
layout_mode = 2

[node name="Panel" type="Panel" parent="Margin/Main/Contains/Margin/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_85jbk")

[node name="TitleMargin" type="MarginContainer" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.80549, 0.80549, 0.80549, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Contains keyword"

[node name="VSeparator" type="VSeparator" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_2y3ip")

[node name="CKCaps" type="Button" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Enable/Disable caps sensitive search."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.404229, 0.778335, 0.358455, 1)
theme_override_colors/font_color = Color(0.839433, 0.232018, 0.232018, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_sjoms")
theme_override_font_sizes/font_size = 17
toggle_mode = true
text = "CS"
flat = true

[node name="VSeparator3" type="VSeparator" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_2y3ip")

[node name="CKButton" type="Button" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Add a new Contains keyword to the list."
theme_override_colors/icon_hover_color = Color(0.396078, 0.737255, 0.2, 1)
icon = ExtResource("2_yey5h")
flat = true

[node name="VSeparator2" type="VSeparator" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_yj4bt")

[node name="CK_Clear" type="Button" parent="Margin/Main/Contains/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Clear all Contains keywords"
theme_override_colors/icon_hover_color = Color(0.627451, 0.172549, 0.172549, 1)
icon = ExtResource("3_f3dlf")
flat = true

[node name="ItemMargin" type="MarginContainer" parent="Margin/Main/Contains/Margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/Main/Contains/Margin/VBoxContainer/ItemMargin"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CK_VBox" type="VBoxContainer" parent="Margin/Main/Contains/Margin/VBoxContainer/ItemMargin/ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Border" type="Panel" parent="Margin/Main/Contains"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_og3yb")
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="Margin/Main"]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_4p5h0")

[node name="Exact" type="Panel" parent="Margin/Main"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kvu5t")

[node name="Margin" type="MarginContainer" parent="Margin/Main/Exact"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1000, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Main/Exact/Margin"]
clip_contents = true
layout_mode = 2

[node name="Panel" type="Panel" parent="Margin/Main/Exact/Margin/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_85jbk")

[node name="TitleMargin" type="MarginContainer" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.80549, 0.80549, 0.80549, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Exact keyword"

[node name="VSeparator3" type="VSeparator" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_2y3ip")

[node name="EKCaps" type="Button" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Enable/Disable caps sensitive search."
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.404229, 0.778335, 0.358455, 1)
theme_override_colors/font_color = Color(0.839433, 0.232018, 0.232018, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_sjoms")
theme_override_font_sizes/font_size = 17
toggle_mode = true
button_pressed = true
text = "CS"
flat = true

[node name="VSeparator" type="VSeparator" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_2y3ip")

[node name="EKButton" type="Button" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Add a new Exact keyword to the list."
theme_override_colors/icon_hover_color = Color(0.396078, 0.737255, 0.2, 1)
icon = ExtResource("2_yey5h")
flat = true

[node name="VSeparator2" type="VSeparator" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_yj4bt")

[node name="EK_Clear" type="Button" parent="Margin/Main/Exact/Margin/VBoxContainer/Panel/TitleMargin/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
tooltip_text = "Clear all Exact keywords"
theme_override_colors/icon_hover_color = Color(0.627451, 0.172549, 0.172549, 1)
icon = ExtResource("3_f3dlf")
flat = true

[node name="ItemMargin" type="MarginContainer" parent="Margin/Main/Exact/Margin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/Main/Exact/Margin/VBoxContainer/ItemMargin"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EK_VBox" type="VBoxContainer" parent="Margin/Main/Exact/Margin/VBoxContainer/ItemMargin/ScrollContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Border" type="Panel" parent="Margin/Main/Exact"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_og3yb")
metadata/_edit_lock_ = true

[node name="Popups" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="ApplyPopup" parent="Popups" instance=ExtResource("6_175fn")]
unique_name_in_owner = true
position = Vector2i(400, 523)
visible = false

[node name="AutoPopup" parent="Popups" instance=ExtResource("6_175fn")]
unique_name_in_owner = true
position = Vector2i(400, 523)
visible = false

[node name="InfoPopup" parent="Popups" instance=ExtResource("7_csjkx")]
unique_name_in_owner = true
position = Vector2i(418, 380)
visible = false

[node name="LoadMenu" parent="Popups" instance=ExtResource("4_wu5yf")]
unique_name_in_owner = true
position = Vector2i(335, 446)
FOLDER = "res://addons/autofoldercolor/save_data/saved_configs/"
boolean_text = "This will overwrite all of your current keywords."
show_warning = false

[node name="SaveMenu" parent="Popups" instance=ExtResource("5_82nrk")]
unique_name_in_owner = true
visible = false
FOLDER = "res://addons/autofoldercolor/save_data/saved_configs/"
DefaultName = "config"
boolean_text = "Do you want to overwrite a previous save file?"

[node name="BackupMenu" parent="Popups" instance=ExtResource("5_82nrk")]
unique_name_in_owner = true
visible = false
FOLDER = "res://addons/autofoldercolor/save_data/backups/"
DefaultName = "backup"
boolean_text = "Do you want to overwrite a previous color backup?"

[node name="RestoreMenu" parent="Popups" instance=ExtResource("4_wu5yf")]
unique_name_in_owner = true
position = Vector2i(340, 409)
FOLDER = "res://addons/autofoldercolor/save_data/backups/"
boolean_text = "Are you sure you want to
overwrite your current file colors?"

[node name="ClearColorsPopup" parent="Popups" instance=ExtResource("6_175fn")]
unique_name_in_owner = true
position = Vector2i(400, 523)
visible = false

[node name="ClearExactPopup" parent="Popups" instance=ExtResource("6_175fn")]
unique_name_in_owner = true
position = Vector2i(400, 523)
visible = false

[node name="ClearContainsPopup" parent="Popups" instance=ExtResource("6_175fn")]
unique_name_in_owner = true
position = Vector2i(400, 523)
visible = false

[node name="SettingsWindow" parent="." instance=ExtResource("8_yasyg")]
unique_name_in_owner = true
visible = false

[connection signal="gui_input" from="Popups" to="." method="_on_popups_gui_input"]
